--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-simple-typewriter": "^5.0.1",
+    "scrollreveal": "^4.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
